--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="item-qty col-xs-3">
           <label>Qty</label>
           <input value="0"></input>
-          <button>Cancel</button>
+          <button class="cancel">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
           $0.00
@@ -65,7 +65,7 @@
         <div class="item-qty col-xs-3">
           <label>Qty</label>
           <input value="0"></input>
-          <button>Cancel</button>
+          <button class="cancel">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
           $0.00
@@ -81,7 +81,7 @@
         <div class="item-qty col-xs-3">
           <label>Qty</label>
           <input value="0"></input>
-          <button>Cancel</button>
+          <button class="cancel">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
           $0.00
@@ -97,7 +97,7 @@
         <div class="item-qty col-xs-3">
           <label>Qty</label>
           <input value="0"></input>
-          <button>Cancel</button>
+          <button class="cancel">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
           $0.00
@@ -113,7 +113,7 @@
         <div class="item-qty col-xs-3">
           <label>Qty</label>
           <input value="0"></input>
-          <button>Cancel</button>
+          <button class="cancel">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
           $0.00
@@ -129,7 +129,7 @@
         <div class="item-qty col-xs-3">
           <label>Qty</label>
           <input value="0"></input>
-          <button>Cancel</button>
+          <button class="cancel">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
           $0.00
@@ -145,7 +145,7 @@
         <div class="item-qty col-xs-3">
           <label>Qty</label>
           <input value="0"></input>
-          <button>Cancel</button>
+          <button class="cancel">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
           $0.00
@@ -161,8 +161,7 @@
         <div class="item-qty col-xs-3">
           <label>Qty</label>
           <input value="0"></input>
-          <button>Cancel</button>
-        </div>
+          <button class="cancel">Cancel</button>
         <div class="item-subtotal col-xs-2">
           $0.00
         </div>
