--- a/index.html
+++ b/index.html
@@ -26,19 +26,6 @@
     </div>
     <div class="container items-list">
       <div class="row">
-      <div class="title-item-name col-xs-4">
-          Item Name
-        </div>
-        <div class="title-item-price col-xs-3">
-          Item Price
-        </div>
-        <div class="title-item-qty col-xs-3">
-          Item Qty
-        </div>
-        <div class="title-item-subtotal col-xs-2">
-          Item Subtotal
-        </div>
-      </div>
       <div class="item row">
         <div class="item-name col-xs-4">
           Salmon
@@ -48,7 +35,7 @@
         </div>
         <div class="item-qty col-xs-3">
           <label>Qty</label>
-          <input value="0"></input>
+          <input class="input-field"value="0"></input>
           <button class="cancel">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
@@ -64,7 +51,7 @@
         </div>
         <div class="item-qty col-xs-3">
           <label>Qty</label>
-          <input value="0"></input>
+          <input class="input-field"value="0"></input>
           <button class="cancel">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
@@ -80,7 +67,7 @@
         </div>
         <div class="item-qty col-xs-3">
           <label>Qty</label>
-          <input value="0"></input>
+          <input class="input-field"value="0"></input>
           <button class="cancel">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
@@ -96,7 +83,7 @@
         </div>
         <div class="item-qty col-xs-3">
           <label>Qty</label>
-          <input value="0"></input>
+          <input class="input-field"value="0"></input>
           <button class="cancel">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
@@ -112,7 +99,7 @@
         </div>
         <div class="item-qty col-xs-3">
           <label>Qty</label>
-          <input value="0"></input>
+          <input class="input-field"value="0"></input>
           <button class="cancel">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
@@ -128,7 +115,7 @@
         </div>
         <div class="item-qty col-xs-3">
           <label>Qty</label>
-          <input value="0"></input>
+          <input class="input-field"value="0"></input>
           <button class="cancel">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
@@ -144,7 +131,7 @@
         </div>
         <div class="item-qty col-xs-3">
           <label>Qty</label>
-          <input value="0"></input>
+          <input class="input-field"value="0"></input>
           <button class="cancel">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
@@ -160,7 +147,7 @@
         </div>
         <div class="item-qty col-xs-3">
           <label>Qty</label>
-          <input value="0"></input>
+          <input class="input-field"value="0"></input>
           <button class="cancel">Cancel</button>
         <div class="item-subtotal col-xs-2">
           $0.00
